--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vis.gl/react-google-maps": "^0.3.3",
+    "dotenv": "^16.3.1",
+    "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "react-dropdown": "^1.11.0"
   },
   "devDependencies": {
     "eslint": "^8",
