--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@vis.gl/react-google-maps": "^0.3.3",
+    "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "next": "14.0.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-dropdown": "^1.11.0"
   },
