--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@vis.gl/react-google-maps": "^0.3.3",
     "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
