--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@vis.gl/react-google-maps": "^0.3.3",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "next": "14.0.2",
+    "path": "^0.12.7",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-dropdown": "^1.11.0",
-    "recharts": "^2.10.1"
+    "recharts": "^2.10.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^8",
