--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-dropdown": "^1.11.0",
+    "read-excel-file": "^5.7.1",
     "recharts": "^2.10.1",
     "xlsx": "^0.18.5"
   },
